Overflow problem is solved

--- a/css/style.css
+++ b/css/style.css
@@ -77,11 +77,15 @@ header {
 }
 
 header .profile-img {
+  width: fit-content;
+  height: auto;
+  margin: 0 auto 25px;
   text-align: center;
-  margin-bottom: 25px;
 }
 
 .profile-img img {
+  width: 100%;
+  height: auto;
   padding: 8px;
   background-color: #fff;
   border-radius: 50%;
@@ -1059,7 +1063,7 @@ header .profile-img {
 
 @media screen and (max-width: 700px) {
   .profile-img img {
-    width: 45%;
+    width: 80%;
     padding: 6px;
   }
   .cursor {
